piccode: Compiler improvements