@@ -1,32 +1,36 @@
 package org.piccode.rt.modules;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import org.piccode.rt.PiccodeArray;
-import org.piccode.rt.PiccodeNumber;
-import org.piccode.rt.PiccodeTuple;
-import org.piccode.rt.PiccodeValue;
+import org.piccode.rt.PiccodeUnit;
 
 
 /**
  *
  * @author hexaredecimal
  */
-public class PiccodeTupleModule {
+public class PiccodeSystemModule {
 	public static void addFunctions() {
-		
-		NativeFunctionFactory.create("tuplesize", List.of("tuple"), (args, namedArgs) -> {
-				var arr = ((PiccodeTuple) namedArgs.get("tuple")).array().length;
-				return new PiccodeNumber("" + arr);
+		// TODO: Fix error messages and show line numbers
+		// Print the stacktrace of the program when the program panics
+		NativeFunctionFactory.create("panic", List.of("message"), (args, namedArgs) -> {
+				var msg = namedArgs.get("message").toString();
+				System.out.println("Panic: " + msg);
+				System.exit(1);
+				return new PiccodeUnit();
 		});
-		
-		NativeFunctionFactory.create("tupletoarray", List.of("tuple"), (args, namedArgs) -> {
-				var arr = ((PiccodeTuple) namedArgs.get("tuple")).array();
-				var list = new ArrayList<PiccodeValue>();
-				list.addAll(Arrays.asList(arr));
-				return new PiccodeArray(list);
+
+		NativeFunctionFactory.create("todo", List.of("message"), (args, namedArgs) -> {
+				var msg = namedArgs.get("message").toString();
+				System.out.println("TODO: " + msg);
+				System.exit(1);
+				return new PiccodeUnit();
 		});
-		
+
+		NativeFunctionFactory.create("unreachable", List.of("message"), (args, namedArgs) -> {
+				var msg = namedArgs.get("message").toString();
+				System.out.println("UNREACHABLE: " + msg);
+				System.exit(1);
+				return new PiccodeUnit();
+		});
 	}
 }
